syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.member.lib";
option java_outer_classname = "memberSaveProtobuf";

service MemberSave {
  rpc memberSave (MemberSaveRequest) returns (MemberSaveResponse) {

  }
}

message MemberSaveRequest {
  string username = 1;
  string password = 2;
  string genderType = 3;
  string nickname = 4;
}

message MemberSaveResponse {
  MemberSaveRequest response = 1;
}